3-cat-breed-images

--- a/page1.html
+++ b/page1.html
@@ -13,9 +13,24 @@
             <li>Maine Coon</li>
             <li>Persian</li>
             <li>Ragdoll</li>
-            <li>Sottish Fold</li>
+            <li>Scottish Fold</li>
             <li>Sphynx</li>
             <li>Domesticated Shorthair</li>
         </ul>
+    <div class="gallery">
+        <div class="outline">
+            <img src="images/scottish-fold-cat.png" width="200">
+            <div class="captions">Picture of Scottish Fold cat</div>
+        </div>
+        <div class="outline">
+            <img src="images/siamese-cat.jpeg" width="200"> 
+            <div class="captions">Picture of a Siamese cat</div>
+        </div>
+        <div class="outline">
+            <img src="images/ragdoll-cat.jpeg" width="200">
+            <div class="captions">Picture of a Ragdoll cat</div>
+        </div>
+    </div>
+        
 </body>
 </html>
