--- a/page1.html
+++ b/page1.html
@@ -6,7 +6,7 @@
     <link rel = "stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Cat Breeds:</h1>
+    <h1 style="padding-left: 20px">Cat Breeds</h1> 
         <ul>
             <li>British Shorthair</li>
             <li>Siamese</li>
