--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
     <link rel = "stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Cat Rankings:</h1>
+    <h1 style="padding-left: 20px;">My Cat Rankings:</h1>
         <ol>
             <li>Domesticated Shorthair</li>
             <li>British Shorthair</li>
@@ -17,5 +17,12 @@
             <li>Persian</li>
             <li>Sphynx</li>
         </ol>
+       
+            <img id="image" src="">
+      
+        <button style=" margin: 20px" type="button" onclick="show()" id="tobi">Why is Domesticated Shorthair is the best cat breed?
+        </button>
+        <script src="script.js"></script>
 </body>
+
 </html>
