--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
     <h1 style="padding-left:20px"><u>CATS</u></h1>
         
     <h3 style="padding-left:20px"><em><strong>Cats</strong></em> are the <strong>best</strong>!</h3>
-    <nav class="navigation">
-        <ul id="page">
-            <li><a href="page1.html">Cat Breeds</a></li>
-            <li><a href="page2.html">Cat Rankings</a></li>
-        </ul>
+    <nav style="padding-left:20px" class="navigation">
+
+            <div>
+                <a href="page1.html">Cat Breeds</a>
+            </div>
+                <a href="page2.html">Cat Rankings</a>
+      
     </nav>
 
     <div>
-    <img src="images/purina_logo.png" width=" 200">
+        <a href="https://www.purina.com/">
+            <img src="images/purina_logo.png" width=" 200">
+        </a>
         <a href="https://www.purina-arabia.com/find-a-pet/cat-breeds/british-shorthair">
     <img style="display:block" src="images/british_shorthair.png" width="200">
         </a>
