--- a/page1.html
+++ b/page1.html
@@ -6,6 +6,11 @@
     <link rel = "stylesheet" href="style.css" />
 </head>
 <body>
+    <nav style="padding-left: 20px" class="navigation">
+        
+        <a href="index.html">Home</a>
+        
+    </nav>
     <h1 style="padding-left: 20px">Cat Breeds</h1> 
         <ul>
             <li>British Shorthair</li>
