--- a/page1.html
+++ b/page1.html
@@ -24,16 +24,16 @@
         </ul>
     <div class="gallery">
         <div class="outline">
-            <img src="images/scottish-fold-cat.png" width="200">
-            <div class="captions">Picture of Scottish Fold cat</div>
+            <img src="images/maine-coon.jpeg" width="200">
+            <div class="captions">Picture of a Maine Coon</div>
         </div>
         <div class="outline">
-            <img src="images/siamese-cat.jpeg" width="200"> 
-            <div class="captions">Picture of a Siamese cat</div>
+            <img src="images/persian.jpeg" width="200"> 
+            <div class="captions">Picture of a Persian</div>
         </div>
         <div class="outline">
-            <img src="images/ragdoll-cat.jpeg" width="200">
-            <div class="captions">Picture of a Ragdoll cat</div>
+            <img src="images/sphyx-cat.jpeg" width="200">
+            <div class="captions">Picture of a Sphyx</div>
         </div>
     </div>
         
