--- a/page2.html
+++ b/page2.html
@@ -6,11 +6,13 @@
     <link rel = "stylesheet" href="style.css" />
 </head>
 <body>
+    <!--Navigation to homepage-->
     <nav style="padding-left: 20px" class="navigation">
     
             <a href="index.html">Home</a>
         
     </nav>
+    <!--Ranking cat breeds-->
     <h1 style="padding-left: 20px;">My Cat Rankings:</h1>
         <ol>
             <li>Domesticated Shorthair</li>
@@ -22,6 +24,7 @@
             <li>Persian</li>
             <li>Sphynx</li>
         </ol>
+    <!--Gallery of cat breeds with captions-->
         <div class="gallery">
             <div class="outline">
                 <img src="images/scottish-fold-cat.png" width="200">
