--- a/page1.html
+++ b/page1.html
@@ -6,11 +6,13 @@
     <link rel = "stylesheet" href="style.css" />
 </head>
 <body>
+    <!--Navigation to homepage-->
     <nav style="padding-left: 20px" class="navigation">
         
         <a href="index.html">Home</a>
         
     </nav>
+    <!--List of cat breeds-->
     <h1 style="padding-left: 20px">Cat Breeds</h1> 
         <ul>
             <li>British Shorthair</li>
@@ -22,6 +24,7 @@
             <li>Sphynx</li>
             <li>Domesticated Shorthair</li>
         </ul>
+    <!--Gallery of cat breeds with captions-->
     <div class="gallery">
         <div class="outline">
             <img src="images/maine-coon.jpeg" width="200">
