table-and-button

--- a/page2.html
+++ b/page2.html
@@ -24,6 +24,23 @@
             <li>Persian</li>
             <li>Sphynx</li>
         </ol>
+    <style>
+    table, th, td {
+        border:1px solid black;
+    }
+    </style> 
+    <table style="margin-bottom:20px">
+        <tr>
+          <td>Scottish Fold</td>
+          <td>Siamese</td>
+          <td>Ragdoll</td>
+        </tr>
+        <tr>
+          <td>Short-haired</td>
+          <td>Short-haired</td>
+          <td>Long-haired</td>
+        </tr>
+      </table>   
     <!--Gallery of cat breeds with captions-->
         <div class="gallery">
             <div class="outline">
@@ -41,7 +58,7 @@
             
             <img class="tobi" id="image" src="" width="200">
         </div>
-        <button style=" margin: 20px" type="button" onclick="show()" id="tobi">Reason why Domesticated Shorthair is the best cat breed
+        <button style=" margin: 20px" type="button" onclick="show()" id="tobi">What is the reason that Domesticated Shorthair is the best cat breed?
         </button>
         <script src="script.js"></script>
 </body>
