--- a/page1.html
+++ b/page1.html
@@ -31,7 +31,7 @@
         border:1px solid black;
     }
     </style> 
-    <table style="margin-bottom:20px">
+    <table style="margin:20px">
         <tr>
           <td>Maine Coon</td>
           <td>Persian</td>
@@ -59,12 +59,12 @@
         </div>
     </div>
 
-    <label id="text">
+    <label style="margin-left: 30px" id="text">
         How about Domesticated-Shorthair?
     </label>
     <br>
 
-    <button onclick="changeText()">
+    <button style="margin-left: 30px" onclick="changeText()">
         What type of hair do they have?
     </button>
     <script src="script.js"></script>
