--- a/page2.html
+++ b/page2.html
@@ -29,7 +29,7 @@
         border:1px solid black;
     }
     </style> 
-    <table style="margin-bottom:20px">
+    <table style="margin:20px">
         <tr>
           <td>Scottish Fold</td>
           <td>Siamese</td>
